--- a/Source/CodeStadt.Core.Tests/CodeStadt.Core.Tests.csproj
+++ b/Source/CodeStadt.Core.Tests/CodeStadt.Core.Tests.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -60,7 +61,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RayTracer\CameraTests.cs" />
     <Compile Include="RayTracer\ColorTests.cs" />
+    <Compile Include="RayTracer\IntersectionTests.cs" />
     <Compile Include="RayTracer\PlaneTests.cs" />
+    <Compile Include="RayTracer\RayTracerTests.cs" />
     <Compile Include="RayTracer\SceneTests.cs" />
     <Compile Include="RayTracer\SphereTests.cs" />
     <Compile Include="RayTracer\VectorTests.cs" />
